--- a/MyStyleSheet.css
+++ b/MyStyleSheet.css
@@ -19,9 +19,9 @@ footer
 {
     color: white;
     text-align: center;
-    text-shadow: 2px 2px 3px #009999;
+    text-shadow: 2px 2px 3px #1b1b1b;
     font-family: "Verdana";
-    background-color: #1b1b1b;
+    background-color: #009999;
 }
     
 
