--- a/MyStyleSheet.css
+++ b/MyStyleSheet.css
@@ -17,7 +17,8 @@
 
 footer
 {
-    width: 1400px;
+    width: 100%;
+    margin: auto;
     color: white;
     text-align: center;
     text-shadow: 2px 2px 3px #1b1b1b;
