--- a/MyStyleSheet.css
+++ b/MyStyleSheet.css
@@ -18,7 +18,7 @@
 footer
 {
     width: 100%;
-    margin: auto;
+    margin:0 auto;
     color: white;
     text-align: center;
     text-shadow: 2px 2px 3px #1b1b1b;
