--- a/MyStyleSheet.css
+++ b/MyStyleSheet.css
@@ -36,8 +36,7 @@ footer
 body
 {
     margin: auto;
-    width: 1000px;
-    height: 1000px;
+    width: 90%;
     border: inset;
     background-image: url(Resources/Background_Body.jpg);
     background-repeat: no-repeat;
