--- a/MyStyleSheet.css
+++ b/MyStyleSheet.css
@@ -42,6 +42,7 @@ body
     background-repeat: no-repeat;
     background-position: bottom;
     font-family: Verdana;
+    box-shadow: #1b1b1b  5px 5px 10px;
 }
 
 h1
