--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,7 @@ html
 {
     background-color: slategrey;
     background-image: url(Resources/Background_Main.jpg);
+    background-repeat: no-repeat;
     background-size: 100% 100%;
 }
 
