--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,7 @@ html
     background-image: url(Resources/Background_Main.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    height: 100%;
 }
 
 .header 
