--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,8 @@ html
 footer
 {
     width: 100%;
-    margin:0 auto;
+    bottom: 0;
+    position: absolute;
     color: white;
     text-align: center;
     text-shadow: 2px 2px 3px #1b1b1b;
