--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,9 +23,11 @@ html
 footer
 {
     margin: 0;
-    height: 30px;
+    height: 50px;
     width: 100%;
     bottom: 0;
+    left: 0;
+    right: 0;
     position: absolute;
     color: white;
     text-align: center;
