--- a/stylesheet.css
+++ b/stylesheet.css
@@ -48,7 +48,7 @@ body
     margin: auto;
     height: 100%;
     width: 90%;
-    margin-bottom: 75;
+    margin-bottom: 75px;
     border: inset;
     background-image: url(Resources/Background_Body.jpg);
     background-repeat: no-repeat;
