--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,6 +26,7 @@ footer
     height: 50px;
     width: 100%;
     margin-bottom: 50px;
+    bottom: 0;
     left: 0;
     right: 0;
     position: absolute;
