--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ html
 .header 
 {
     background-color: #009999;
-    background-image: url(Resources/curcuit.jpg);
+    background-image: url(Resources/circuit.jpg);
     background-repeat: repeat-x;
     background-repeat: repeat-y;
     background-size: cover;
