--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,7 +15,7 @@ html
     background-image: url(Resources/circuit.jpg);
     background-repeat: repeat-x;
     background-repeat: repeat-y;
-    background-size: cover;
+    background-size: 250px 250px;
     padding: 10px;
     color: white;
     text-align: center;
