--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,8 +13,7 @@ html
 {
     background-color: #009999;
     background-image: url(Resources/circuit.jpg);
-    background-repeat: repeat-x;
-    background-repeat: repeat-y;
+    background-repeat: repeat;
     background-size: 250px 250px;
     padding: 10px;
     color: white;
