--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,8 +59,8 @@ body
     height: 90%;
     width: 90%;
     border: inset;
-    background-image: url(Resources/Background_Body.jpg);
-    background-repeat: no-repeat;
+    background-image: url(Resources/hex_seamless.jpg);
+    background-repeat: repeat;
     background-size: 100% 100%;
     font-family: Verdana;
 }
