--- a/stylesheet.css
+++ b/stylesheet.css
@@ -61,7 +61,7 @@ body
     border: inset;
     background-image: url(Resources/hex_seamless.jpg);
     background-repeat: repeat;
-    background-size: 100% 100%;
+    background-size: 280px 251px;
     font-family: Verdana;
 }
 
