--- a/stylesheet.css
+++ b/stylesheet.css
@@ -52,6 +52,14 @@ footer
     box-shadow: 0px 10px 10px;
 }
 
+img
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+}
+
 body
 {
     margin: auto;
