--- a/stylesheet.css
+++ b/stylesheet.css
@@ -57,7 +57,12 @@ img
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 25%;
+    width: 50%;
+}
+
+.centeredImage
+{
+    
 }
 
 body
