--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,15 +54,17 @@ footer
 
 img
 {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
     width: 50%;
 }
 
-.centeredImage
+.ProfileImage
 {
-    
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
 }
 
 body
