--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,9 +59,13 @@ img
 
 .ProfileImage
 {
+    padding-top: 25px;
+    width: 200px;
+    height: 200px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 0px 5px 5px;
 }
 
 body
