--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,6 +65,7 @@ img
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 50%;
     box-shadow: 0px 5px 5px;
 }
 
