--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,20 +49,18 @@ footer
 
 .Videos
 {
-    padding: 50px
-        
+    padding: 50px; 
     box-shadow: 0px 10px 10px;
 }
 
 .ProfileImage
 {
-    padding-top: 25px;
     width: 200px;
     height: 200px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 40%;
+    border-radius: 45%;
     box-shadow: 0px 5px 10px;
 }
 
