--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,6 +20,7 @@ html
     text-align: center;
     text-shadow: 2px 2px 3px #1b1b1b;
     font-family: "Verdana";
+    box-shadow: 0px 5px 10px;
 }
 
 footer
