--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,6 +53,13 @@ footer
     margin: 25px;
     box-shadow: #1b1b1b 0px 10px 10px;
 }
+.ResumeImage
+{
+    margin-left: auto;
+    margin-right: auto;
+    height: 75%;
+    width: 50%;
+}
 
 .ProfileImage
 {
