--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,6 +65,7 @@ footer
 .ProfileImage
 {
     margin-top: 50px;
+    margin-bottom: 50px;
     width: 200px;
     height: 200px;
     display: block;
