--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,6 +56,7 @@ footer
 .ResumeImage
 {
     margin-top: 50px;
+    margin-bottom: 50px;
     margin-left: auto;
     margin-right: auto;
     height: 75%;
