--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,7 +31,7 @@ footer
     bottom: 0;
     left: 0;
     right: 0;
-    position: absolute;
+    position: relative;
     color: white;
     text-align: center;
     text-shadow: 2px 2px 3px #1b1b1b;
