--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,7 +28,7 @@ footer
     
     height: 50px;
     width: 100%;
-    bottom: 0;
+    bottom: -10%;
     left: 0;
     right: 0;
     position: absolute;
