--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,7 @@ html
     background-color: slategrey;
     background-image: url(Resources/Background_Main.jpg);
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: 100% 100%;
     height: 100%;
     width: 100%;
