--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,3 @@
-
 html
 {
     background-color: slategrey;
@@ -32,7 +31,7 @@ footer
     bottom: 0;
     left: 0;
     right: 0;
-    position: absolute;
+    position: fixed;
     color: white;
     text-align: center;
     text-shadow: 2px 2px 3px #1b1b1b;
