--- a/stylesheet.css
+++ b/stylesheet.css
@@ -79,7 +79,9 @@ footer
 
 body
 {
-    margin: auto;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 100px;
     width: 90%;
     border: inset;
     background-image: url(Resources/hex_seamless.jpg);
