added game window

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -130,3 +130,10 @@ a:hover
     font-family: inherit;
     text-shadow: 2px 2px 2px #1b1b1b;
 }
+
+.GameWindow
+{
+    margin: auto;
+    width : 500px;
+    height : 500px;
+}
